2007-11-29  Dougas S. Blank  <dblank@cs.brynmawr.edu>
	* src/Editors/_EditFamily.py: reverse surname guess for father

2007-11-29  Douglas S.Blank  <dblank@cs.brynmawr.edu>
	* src/ReportBase/__init__.py: import MenuReportOptions
	* src/ReportBase/_ReportOptions.py: import MenuOptions and
	  define MenuReportOptions
	* src/plugins/Calendar.py: get MenuReportOptions from ReportOptions
	* src/plugins/DescendChart.py: ditto
	* src/plugins/AncestorChart.py: ditto
	* src/plugins/GVHourGlass.py: ditto
	* src/plugins/FanChart.py: ditto
	* src/PluginUtils/__init__.py: define MenuToolOptions
	* src/PluginUtils/_MenuOptions.py: Remove circular dependancies

2007-11-29 Benny Malengier <benny.malengier@gramps-project.org>
	* src/DataViews/_RepositoryView.py:
	* src/gen/db/base.py:
	* src/DisplayModels/_RepositoryModel.py:
	Added a change column in repoview, model, database column storage

2007-11-29  Douglas S.Blank  <dblank@cs.brynmawr.edu>
	* po//POTFILES.in: renamed PluginStatus.py -> PluginWindows.py

2007-11-29  Douglas S. Blank  <dblank@cs.brynmawr.edu>
	* src/plugins/ImportCSV.py: add progress meter

2007-11-29  Douglas S. Blank  <dblank@cs.brynmawr.edu>
	* src/ViewManager.py: use PluginsWindows
	* src/PluginUtils/_PluginStatus.py: moved from
	* src/PluginUtils/_PluginWindows.py: moved to
	* src/PluginUtils/__init__.py: use PluginsWindows
	* src/PluginUtils/_Plugins.py: use PluginsWindows

2007-11-28  Douglas S. Blank  <dblank@cs.brynmawr.edu>
	* src/PluginUtils/_MenuOptions.py: added comments
	* src/PluginUtils/_PluginStatus.py: added ToolManagedWindowBatch

2007-11-28 Jim Sack <jgsack@san.rr.com>
        * src/GrampsDb/_ReadGedcom.py : remove trail whitespace (readahead)
        fixes (possible) discarded reference due to bogus handles that get created
        when the reference looks like "@REF_ID@ " (note space after)
	This is a forward-port of the 2.2.x fix for issue #1399

2007-11-28  Douglas S. Blank  <dblank@cs.brynmawr.edu>